# 30_ajanl-_ai

./: README.md  pyproject.toml
app/: agent.py  agent_worker.py  dispatcher.py  main.py  models.py  orchestrator.py  prompts.py  sandbox.py
examples/: generate_from_prompt.py  payment_module_simulation.py
