[project]
name = "thirty-independent-ai-agents"
version = "0.1.0"
description = "FastAPI prototype for 30 isolated AI software development agents"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.6.0"
]

[project.optional-dependencies]
dev = []

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
